fixed white space
Finally figured out the stupid column spacing

--- a/_pgbackup/style_1528122603.css
+++ b/_pgbackup/style_1528122603.css
@@ -67,7 +67,6 @@ h3 > span:hover:before {
 .collections {
     font-size: 5vh;
     list-style-type: none;
-    margin-left: -40px;
 }
 
 .collections li:hover {
@@ -83,29 +82,25 @@ h3 > span:hover:before {
     width: 100%;
     height: auto;
     object-fit: cover;
-    padding: 10px;
+    padding: 20px;
 }
 
 @media (max-width: 1264px) {
     .main-iso .item {
-        width: 45%;
-        height: auto;
+        width: 50%;
+        height: 300px;
     }
 
     .image {
         width: 100%;
         object-fit: cover;
     }
-
-    .collections {
-        margin-left: -40px;
-    }
 }
 
-@media (max-width: 987px) {
+@media (max-width: 900px) {
     .main-iso .item {
         width: 100%;
-        height: auto;
+        height: 300px;
     }
 
     .image {
@@ -128,11 +123,11 @@ h3 > span:hover:before {
 
 .photo-item span {
     display: block;
-    height: calc(100% - 20px);
-    width: calc(100% - 20px);
-    top: 10px;
+    height: calc(100% - 40px);
+    width: calc(100% - 40px);
+    top: 20px;
     position: absolute;
-    left: 10px;
+    left: 20px;
     right: 0;
     bottom: 0;
     text-align: center;
@@ -161,6 +156,5 @@ hr {
     padding: 0;
 }
 
-.port {
-    height: 400px !important;
+.zebra {
 }
