--- a/_pgbackup/style_1528129276.css
+++ b/_pgbackup/style_1528129276.css
@@ -88,8 +88,8 @@ h3 > span:hover:before {
 
 @media (max-width: 1264px) {
     .main-iso .item {
-        width: 45%;
-        height: auto;
+        width: 50%;
+        height: 300px;
     }
 
     .image {
@@ -102,10 +102,10 @@ h3 > span:hover:before {
     }
 }
 
-@media (max-width: 987px) {
+@media (max-width: 900px) {
     .main-iso .item {
         width: 100%;
-        height: auto;
+        height: 300px;
     }
 
     .image {
@@ -128,11 +128,11 @@ h3 > span:hover:before {
 
 .photo-item span {
     display: block;
-    height: calc(100% - 20px);
-    width: calc(100% - 20px);
-    top: 10px;
+    height: calc(100% - 40px);
+    width: calc(100% - 40px);
+    top: 20px;
     position: absolute;
-    left: 10px;
+    left: 20px;
     right: 0;
     bottom: 0;
     text-align: center;
